Fix z-index box shadow woes.

--- a/app/components/image-uploader/image-uploader.styl
+++ b/app/components/image-uploader/image-uploader.styl
@@ -2,6 +2,8 @@
 
 [data-component="image-uploader"]
   align-items center
+  position relative
+  z-index 1
 
   .standard[filepicker]
     display block
